[gd_scene load_steps=10 format=3 uid="uid://bxsdn16tqpb2x"]

[ext_resource type="Script" path="res://Scripts/Controllers/AI/Enemies/MiniCyclopesController.gd" id="1_t1dyv"]
[ext_resource type="Texture2D" uid="uid://crnedjck8t7ib" path="res://Assets/Enemies/Crab/Crab.png" id="2_73rch"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tknsx"]
atlas = ExtResource("2_73rch")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fau1p"]
atlas = ExtResource("2_73rch")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi75d"]
atlas = ExtResource("2_73rch")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_klmv3"]
atlas = ExtResource("2_73rch")
region = Rect2(64, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_th7yu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tknsx")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fau1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi75d")
}],
"loop": true,
"name": &"Moving",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_klmv3")
}],
"loop": true,
"name": &"Pushed",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_krsj3"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2nleg"]
radius = 9.0

[node name="Mini Cyclopes" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
mass = 0.75
gravity_scale = 0.0
lock_rotation = true
linear_damp = 4.0
script = ExtResource("1_t1dyv")
States = ["Idle", "Moving"]
AIUpdateTime = 1.0
metadata/Pushed = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -3)
sprite_frames = SubResource("SpriteFrames_th7yu")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_krsj3")
debug_color = Color(0.629421, 0.508102, 0.422822, 0.42)

[node name="HitRange" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitoring = false
metadata/Pushable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitRange"]
shape = SubResource("CircleShape2D_2nleg")

[node name="AI_Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="HitRange" to="." method="_on_hit_range_body_entered"]
[connection signal="body_exited" from="HitRange" to="." method="_on_hit_range_body_exited"]
[connection signal="timeout" from="AI_Timer" to="." method="_on_ai_timer_timeout"]
